섹션5 WebApiExRateProvider 리팩토링 - IOException을 던지는 곳이 여러 곳에 있어 이것을 WebApiExRateProvider에서 try-catch를 사용해 그곳에만 예외처리를 할 수 있도록 리팩토링